tests/snapshots/render__a_repo_with_no_optional_fields_is_just_its_id_ref_and_sha.snap
---
source: tests/render.rs
expression: "body(&block(config, &lock(&[(\"a\", \"v1\", None)])))"
---
### Ungrouped

```text
[a @ v1 ee49b3e]
```
