tests/snapshots/render__a_sha_ref_is_shown_once.snap
---
source: tests/render.rs
expression: "body(&block(&config, &lock(&[(\"a\", SHA, None)])))"
---
### Ungrouped

```text
[a @ ee49b3e]
```
