tests/snapshots/render__references_dir_is_substituted_into_the_prose.snap
---
source: tests/render.rs
expression: text
---
<!-- BEGIN:refs -->

## Reference repos

```text
Source and docs for some dependencies are checked out read-only in `vendor/refs/`, pinned in `refs.lock`. They can be newer than your training data. Prefer retrieval-led reasoning over pre-training-led reasoning for these libraries: read the relevant files before writing code that uses them. Look up an imported API in a repo whose `Packages:` lists the package it's imported from (e.g. imports from `p` → `vendor/refs/a`); APIs with the same name can behave differently in different packages.

`vendor/refs/` is excluded from default search. To search it, pass the path explicitly, e.g. `vendor/refs/a`. Don't edit anything in `vendor/refs/`; it is regenerated by `refs sync`. If `vendor/refs/` is missing, tell the user to run `refs sync`.
```

### Ungrouped

```text
[a @ HEAD ee49b3e] Packages: p.
```

<!-- END:refs -->
