tests/snapshots/render__without_packages_the_lookup_sentence_is_left_out.snap
---
source: tests/render.rs
expression: text
---
<!-- BEGIN:refs -->

## Reference repos

```text
Source and docs for some dependencies are checked out read-only in `.references/`, pinned in `refs.lock`. They can be newer than your training data. Prefer retrieval-led reasoning over pre-training-led reasoning for these libraries: read the relevant files before writing code that uses them.

`.references/` is excluded from default search. To search it, pass the path explicitly, e.g. `.references/a`. Don't edit anything in `.references/`; it is regenerated by `refs sync`. If `.references/` is missing, tell the user to run `refs sync`.
```

### Ungrouped

```text
[a @ HEAD ee49b3e]
```

<!-- END:refs -->
